- set inputfields text-align-center - fixed scroll down push add button on create answer option view - change title h3 to div

--- a/arsnova.click/client/css/mainLayout.css
+++ b/arsnova.click/client/css/mainLayout.css
@@ -90,3 +90,8 @@ p, ul.list-unstyled {
 .input-group-slider {
     margin-top: 20px;
 }
+
+.row-landingpage-buttons {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
